--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -18,6 +18,7 @@ substitutions:
 
   double_tap_timeout: 350ms
   double_tap_color: "{100, 0, 100}"
+  blink_delay: 150ms
 
   nightlight: "on"
   nightlight_brightness: "0.2"
@@ -949,15 +950,15 @@ script:
           }
           //id(led_on_button_press)->execute(button, true);
           id(blink)->execute(button, 1);
-      - delay: 250ms
+      - delay: ${blink_delay}
       - lambda: |-
           id(blink)->execute(button, 2);
-      - delay: 250ms
+      - delay: ${blink_delay}
       - lambda: |-
           id(blink)->execute(button, 1);
-      - delay: 250ms
+      - delay: ${blink_delay}
       - lambda: |-
-          id(blink)->execute(button, 1);
+          id(blink)->execute(button, 2);
           id(handle_on_release).execute(button, false);
 
   - id: blink
