--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -849,7 +849,6 @@ script:
           count: 100
           then:
             - lambda: |-
-                auto c = id(tx_touch).get_color_gradient(${min_bar_color1}, ${max_bar_color1}, 3);
                 ESP_LOGD("button", "gradient: %d %d %d ", c[0], c[1], c[2]);
                 if (id(button_held)[button-1] == 0) {
                   ESP_LOGI("button", "button %d no longer held in up and down", button);
@@ -879,17 +878,33 @@ script:
           //ESP_LOGI("button", "set_bar_height to %d for button %d", height, button);
           auto target_led = static_cast<esphome::light::AddressableLight *>(id(all_leds).get_output()); 
           auto black = esphome::Color(0, 0, 0);
+          esphome::Color min_bar_color;
+          esphome::Color max_bar_color;
+          switch (button) {
+            case 1:
+              min_bar_color = ${min_bar_color1};
+              max_bar_color = ${max_bar_color1};
+            case 2:
+              min_bar_color = ${min_bar_color2};
+              max_bar_color = ${max_bar_color2};
+            case 3:
+              min_bar_color = ${min_bar_color3};
+              max_bar_color = ${max_bar_color3};
+            case 4:
+              min_bar_color = ${min_bar_color4};
+              max_bar_color = ${max_bar_color4};
+          }
           if (height == 0) {
             target_led->range(13, 20).set(black);
             target_led->range(0, 6).set(black);
             target_led->get(27).set(black);
           } else {
             for (int i=0; i<height; i++) {
-              target_led->get(13+i).set(id(bar_colors)[i]);
+              target_led->get(13+i).set(id(tx_touch).get_color_gradient(min_bar_color, max_bar_color, i));
               if (i==7) {
-                target_led->get(27).set(id(bar_colors)[i]);
+                target_led->get(27).set(id(tx_touch).get_color_gradient(min_bar_color, max_bar_color, i));
               } else {
-                target_led->get(5-i).set(id(bar_colors)[i]);
+                target_led->get(5-i).set(id(tx_touch).get_color_gradient(min_bar_color, max_bar_color, i));
               }
             }
             for (int i=height; i<7; i++) {
