--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -1236,7 +1236,11 @@ script:
           ESP_LOGI("button", "knight_rider left? %d", left);
           auto target_led = static_cast<esphome::light::AddressableLight *>(id(all_leds).get_output()); 
           esphome::Color gradient;
-          gradient = id(tx_touch).get_color_gradient(id(min_swipe_left_color), id(max_sipe_left_color), iteration);
+          if (left) {
+            gradient = id(tx_touch).get_color_gradient(id(min_swipe_left_color), id(max_swipe_left_color), iteration);
+          } else {
+            gradient = id(tx_touch).get_color_gradient(id(min_swipe_right_color), id(max_swipe_right_color), iteration);
+          }
           target_led->get(led_offset+iteration).set(gradient);
 
   - id: led_on_swipe_left
